[project]
name = "flying-things"
version = "0.1.0"
description = ""
authors = [
    {name = "graxel",email = "grazel98@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "esptool (>=5.0.2,<6.0.0)",
    "numpy (>=2.2.0,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
